--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,39 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <meta name="description"
-  content="{{ block "description" . }}{{ .Site.Params.description }}{{ end }}">
-
-  <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  {{ block "meta_tags" . }}{{ end }}
-
-  <link rel="icon" href="{{ .Site.BaseURL }}favicon.png">
-
-  {{ if hugo.IsServer }}
-    {{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" true) }}
-    <link rel="stylesheet" href="{{ $style.RelPermalink }}">
-  {{ else }}
-    {{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" false) }}
-    <link rel="stylesheet" href="{{ ($style | minify | fingerprint).RelPermalink }}">
-  {{ end }}
-
-  <!-- FONT AWESOME -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  >
-
-  {{ block "header_css" . }}{{ end }}
-</head>
+{{ partial "head.html" . }}
 
 <body class="page {{ block "body_classes" . }}{{ end }}">
 
@@ -43,8 +11,7 @@
 
     {{ partial "header.html" . }}
 
-    {{ block "main" . }}
-    {{ end }}
+    {{ block "main" . }}{{ end }}
 
   </div>
 
@@ -52,12 +19,10 @@
 
   {{ $scripts := resources.Get "js/scripts.js" }}
 
-  {{ block "footer_js" . }}{{ end }}
-
   {{ if hugo.IsServer }}
-    <script type="text/javascript" src="{{ $scripts.RelPermalink }}"></script>
+    <script src="{{ $scripts.RelPermalink }}"></script>
   {{ else }}
-    <script type="text/javascript" src="{{ ($scripts | minify | fingerprint).RelPermalink }}"></script>
+    <script src="{{ ($scripts | minify | fingerprint).RelPermalink }}"></script>
   {{ end }}
 
   {{ partial "google-analytics.html" . }}
