--- a/layouts/szolgaltatasok/single.html
+++ b/layouts/szolgaltatasok/single.html
@@ -3,13 +3,7 @@
 <section class="hero hero-services">
   <div class="hero-inner text-center">
 
-    <h1 class="hero-title">
-      Szalagparketta lerakás
-    </h1>
-
-    <p class="hero-subtitle">
-      Precíz kivitelezés Piliscsabán és környékén
-    </p>
+    <h1 class="hero-title">{{ .Title }}</h1>
 
     <a href="/kapcsolat/" class="btn-hero">
       Ajánlatot kérek
@@ -41,7 +35,6 @@
           </div>
         
         </section>
-        
         
         <section class="before-after">
         
