--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,8 +27,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title"
         content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }}{{ end }}">
-  <meta property="og:description"
-        content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{ end }}">
+  <meta property="og:description" content="{{ .Description | default .Site.Params.description }}">
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="og:image" content="{{ .Site.BaseURL }}og.jpg">
 
@@ -69,7 +68,7 @@
       "addressLocality": "Piliscsaba",
       "addressCountry": "HU"
     },
-    "image": "{{ .Site.BaseURL }}og.jpg"
+    "image": "{{ .Site.BaseURL }}{{ .Site.Params.ogImage }}"
   }
   </script>
 
