Opengraph config fix

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -51,8 +51,6 @@
     referrerpolicy="no-referrer"
   >
 
-  <script type="application/ld+json">
-    {{ partial "service-schema.jsonld.html" . }}
-  </script>
+  {{ partial "service-schema.jsonld.html"}}   
 
 </head>
