--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,7 @@
 
       <nav class="footer-nav">
         <a href="/">Főoldal</a>
+        <a href="/szolgaltatasok/">Szolgaltatasok</a>
         <a href="/kapcsolat/">Kapcsolat</a>
       </nav>
 
